--- a/28-Currency Convertor/package.json
+++ b/28-Currency Convertor/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tailwindcss build -i ./src/style.css -o ./dist/style.css  --watch"
   },
   "keywords": [],
   "author": "",
